package pers.mtx.factory.simplefactory.pizzastore.pizza;
//Pizza类做成抽象的
public abstract class Pizza {

    protected String name;

    //准备原材料,不同的pz不一样,所以是抽象方法
    public abstract void prepare();

    public void bake(){
        System.out.println(name + "baking");
    }
    public void cut(){
        System.out.println(name + "cutting");
    }
    public void box(){
        System.out.println(name + "boxing");
    }

    public void setName(String name) {
        this.name = name;
    }
}
