@startuml

class Pizza{
prepare():void
bake():void
cut():void
box():void
}

class CheesePizza


class GreekPizza

class OrderPizza

class PepperPizza

class SimplFactory

class OrderPizza2

class OrderPizza3

OrderPizza o-- SimplFactory
OrderPizza2 o-- SimplFactory
OrderPizza3 o-- SimplFactory


GreekPizza --|>Pizza
CheesePizza --|>Pizza
PepperPizza --|>Pizza
@enduml